[package]
name = "bevy_serde_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.12.0"
bevy_utils = "0.12.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.91"

[dev-dependencies]
assert-json-diff = "2.0.2"
