[package]
name = "bevy_serde_macros"
version = "0.2.2"
edition = "2021"
authors = ["Brandon Barker <brandon.barker@gmail.com>"]
description = "Macros for easing use of serde on bevy entities and components"
repository = "https://github.com/bbarker/bevy_serde_macros"
homepage = "https://github.com/bbarker/bevy_serde_macros"
license = "MPL-2.0"
keywords = ["gamedev", "ecs", "bevy", "serde", "serialization"]
readme = "Readme.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.12.0"
bevy_utils = "0.12.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.91"
